# health_portal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-PATCH.md  CHANGELOG.md  CHANGE_LOG.md  COMPLIANCE_REQUIREMENTS.md  CONTRIBUTING.md  DATA_DEPENDANCIES.md  FHIR_ADDENDUM.md  LICENSE  Makefile  README.md  README_PORTAL_INGEST.md  VERIFY_ALL.sh  pyproject.toml  pytest.ini  verify.sh
.github/: CODEOWNERS  CODEOWNERS.sample  PULL_REQUEST_TEMPLATE.md  pgdb.md
.venv-portal-ingest/: pyvenv.cfg
.venv_warehouse/: pyvenv.cfg
api/: openapi.genomics_reports.v1.yaml
blocks/: README.md  registry.yaml
config/: backends.json
core/: contracts.yaml
docs/: AUTH_README.md  Blocks_Working_Agreement.md  CONTINUE_CONTEXT.md  LIVING_BRIEF_GENOMICS.md  LLM_Coder_Guardrails.md  LLM_Coder_VS_Quickstart.md  OPEN_ISSUES_GENOMICS.md  OUTSTANDING_TASKS.md  PRIORITIES.md  PR_BODY.md  PR_CLOSURE.md  UI_SUMMARY.md  genomics_auth_design.md  genomics_data_manifest.yaml  index.md
jobs/: ai_daily_scan.py  cleanup_sessions.py  debug_import_mismatch.py  export_bundle.py  export_pdf.py  export_vitals_daily.py  import_apple_health.py  import_fhir_ndjson.py  index_genomics_reports.py  map_fhir_observations.py  map_fhir_to_events.py  mirror_fhir_observations.py  refresh_genomics_summary.py  refresh_materialized_views.py  refresh_views.py  seed_sample_data.py  verify_import.py
schemas/: README.md
scripts/: create_issues.sh  create_user.py  hp_light_mode.sh  hp_manual_commit.sh  import_fhir_dir.sh  normalize_lab_labels.sql  parse_portal_text.py  test_labs_catalog_api.sh  verify_auth_migration.sh  (+1 more)
(+507 files in other folders)
